# OOP

./: CMakeCache.txt  CMakeLists.txt  Eleven.cpp  Eleven.h  Makefile  cmake_install.cmake  figure.h  func.cpp  func.h  lab_1_main.cpp  lab_1_separation.cpp  lab_1_separation.h  lab_1_test.cpp  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h  tect  test_Eleven  test_Eleven.cpp  test_point  test_point.cpp  test_rectangle.cpp  test_square.cpp  test_triangle.cpp  triangle.cpp  triangle.h
lab_1/: CMakeLists.txt  README.md  lab_1_main.cpp  lab_1_separation.cpp  lab_1_separation.h  lab_1_test.cpp
lab_3/: a.out  figure.h  main.cpp  point.cpp  point.h  square.cpp  square.h
